bug: fix general layout issues

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,4 +1,11 @@
 .content {
-  max-width: 880px;
+  min-width: 880px;
   margin: 0 auto;
+  flex: 1 0 auto;
+}
+
+@media screen and (max-width: 880px) {
+  .content {
+    min-width: 0;
+  }
 }
