--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,13 @@
 @import url("./__text/footer__text.css");
 
 .footer {
-  max-width: 880px;
+  min-width: 880px;
   margin: 0 auto;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 880px) {
+  .footer {
+    min-width: 100%;
+  }
 }
