--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,10 @@
 .page {
   background-color: #000;
-  margin: 0 auto;
   padding: 0;
   font-family: Inter, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0;
+  min-height: 100vh;
 }
