--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -5,6 +5,10 @@
   line-height: 1.15;
   padding: 0;
   margin: 0 18px 0 0;
+  max-width: 275px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 920px) {
