--- a/blocks/profile/__user-text/profile__user-text.css
+++ b/blocks/profile/__user-text/profile__user-text.css
@@ -10,5 +10,6 @@
 @media screen and (max-width: 550px) {
   .profile__user-text {
     max-width: 230px;
+    margin-left: 0;
   }
 }
