--- a/blocks/profile/__user-title/profile__user-title.css
+++ b/blocks/profile/__user-title/profile__user-title.css
@@ -3,6 +3,10 @@
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
+  max-width: 275px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 550px) {
